--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list-container {
+  margin: 100px auto;
+  width: 600px;
+  height: auto;
+  min-height: 600px;
+  border: 1px solid grey;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Quicksand;
+}
+
+.header {
+  background-color: #e4b014;
+  color: white;
+  font-size: 35px;
+  width: 550px;
+  height:50px;
+  margin: 20px auto;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.add-item-container {
+  width: 600px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-field {
+  width: 300px;
+  height: 25px;
+  border: 1px solid #9e9e9e;
+  margin-right: 10px;
+  border-radius: 10px;
+}
+
+.input-add-icon-container {
+  display: flex;
+  align-items: center;
+}
+
+.list {
+  padding: 0;
+  height: auto;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px auto;
+}
+
+.list-item {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  word-wrap: break-word;
+  margin: 10px auto;
+}
+
+.list-item-name {
+  width: auto;
+  min-width: 325px;
+  height: 35px;
+  align-items: center;
+  display: flex;
+  padding-left: 20px;
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.add-icon {
+  color: #e4b014;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.trash-icon {
+  margin-right: 20px;
+  color: grey;
 }
